@@ -62,6 +62,10 @@ struct Point2D {
     Point2D operator-(const Point2D& other) const { return { x - other.x, y - other.y }; }
     Point2D operator*(double scalar) const { return { (int) (x * scalar), (int) (y * scalar) }; }
     Point2D operator/(double scalar) const { return { (int) (x / scalar), (int) (y / scalar) }; }
+    //! compare w.r.t. lexicographic order
+    bool operator<(const Point2D& other) const {
+        return x < other.x || (x == other.x && y < other.y);
+    }
     bool operator==(const Point2D& other) const { return x == other.x && y == other.y; }
     //! essentially return y/x > other.y/other.x
     bool biggerSlopeThan(const Point2D& other) const {
